[package]
name = "rc64"
version = "0.1.0"
authors = ["Joshua Bachmeier <joshua.bachmeier@student.kit.edu>", "Christian Schwarz <me@cschwarz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
enum-map = "0.6"
