[package]
name = "rc64"
version = "0.1.0"
authors = ["Joshua Bachmeier <joshua.bachmeier@student.kit.edu>", "Christian Schwarz <me@cschwarz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
enum-map = "0.6"
derive_more = "0.99"
lazy_static = "1.4"
minifb = "0.13"
num_enum = "0.4.2"