[package]
name = "rc64"
version = "0.1.0"
authors = ["Joshua Bachmeier <joshua.bachmeier@student.kit.edu>", "Christian Schwarz <me@cschwarz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "rc64"


[[bin]]
name = "rc64"
path = "src/main.rs"

[[bin]]
name = "xfrm_timing_table"
path = "src/mos6510/xfrm_timing_table.rs"

[dependencies]
rc64-macros = { path = "../macros" }
bit-vec = "0.6"
enum-map = "0.6"
derive_more = "0.99"
lazy_static = "1.4"
minifb = "0.13"
num_enum = "0.4.2"
strum = "0.16"
strum_macros = "0.16"
maplit = "1.0"
bitflags = "1.2"
spin  ="0.5"
spin_sleep = "*"
scraper = "0.11"
matches = "0.1"