[package]
name = "rc64"
version = "0.1.0"
authors = ["Joshua Bachmeier <joshua.bachmeier@student.kit.edu>", "Christian Schwarz <me@cschwarz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "rc64"

[features]
default = [ "headless-chicken" ]
headless-chicken = []


[[bin]]
name = "rc64"
path = "src/main.rs"

[dependencies]
rc64-macros = { path = "../macros" }
bit-vec = "0.6"
bitvec = "0.17.2"
enum-map = "0.6"
derive_more = "0.99"
lazy_static = "1.4"
minifb = "0.13"
num_enum = "0.4.2"
strum = "0.16"
strum_macros = "0.16"
maplit = "1.0"
bitflags = "1.2"
spin  ="0.5"
spin_sleep = "*"
rustyline = "~5.0.0"
signal-hook = "~0.1"
regex = "~1"
structopt = "0.3"
