[package]
name = "rc64"
version = "0.1.0"
authors = ["Joshua Bachmeier <joshua.bachmeier@student.kit.edu>", "Christian Schwarz <me@cschwarz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "rc64"

[[bin]]
name = "rc64"
path = "src/main.rs"

[dependencies]
assert_cli = "0.6.3"
bit-vec = "0.6"
bitflags = "1.2"
bitvec = "0.17.2"
derive_more = "0.99"
enum-map = "0.6"
lazy_static = "1.4"
maplit = "1.0"
minifb = "0.13"
num_enum = "0.4.2"
rc64-macros = { path = "../macros" }
regex = "~1"
rustyline = "~5.0.0"
signal-hook = "~0.1"
spin  ="0.5"
spin_sleep = "*"
structopt = "0.3"
strum = "0.16"
strum_macros = "0.16"
include_dir = "0.5"